이전에 작업했던 화면들 수정된 버전으로 현행화 작업

--- a/base/html/bj_list.html
+++ b/base/html/bj_list.html
@@ -32,14 +32,10 @@
 
             <section class="filter-grouop">
               <div class="inner">
-                <div class="ui segment label-input">
-                  <em>배치작업 ID</em>
-                  <div class="ui input md">
-                    <input type="text" />
-                  </div>
+                <div class="ui input md label-none">
+                  <input type="text" placeholder="배치작업 ID" />
                 </div>
-                <!-- //segment -->
-                <button class="ui primary basic button">검색</button>
+                <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
             </section>
@@ -82,10 +78,10 @@
                     </th>
                     <th>No</th>
                     <th>배치작업 ID</th>
-                    <th>실행주기</th>
+                    <th>실행 주기</th>
                     <th>내용</th>
-                    <th>최종실행</th>
-                    <th>실행상태</th>
+                    <th>최종 실행</th>
+                    <th>실행 상태</th>
                     <th>수정일시</th>
                   </tr>
                 </thead>
