--- a/base/html/bj_view.html
+++ b/base/html/bj_view.html
@@ -35,17 +35,17 @@
                   <td colspan="3">CenterClientSocketJob</td>
                 </tr>
                 <tr>
-                  <th>실행주기</th>
+                  <th>실행 주기</th>
                   <td colspan="3">00/5 ***</td>
                 </tr>
                 <tr>
-                  <th>최종실행</th>
+                  <th>최종 실행</th>
                   <td>2021-06-07 12:31:33</td>
-                  <th>실행상태</th>
+                  <th>실행 상태</th>
                   <td>Y</td>
                 </tr>
                 <tr>
-                  <th>내용</th>
+                  <th class="rowspan-style1">내용</th>
                   <td colspan="3">
                     <div class="height-extend">CenterClientSocketJob</div>
                   </td>
