--- a/base/html/camera_view.html
+++ b/base/html/camera_view.html
@@ -59,11 +59,11 @@
                 <tr>
                   <th>채널</th>
                   <td>1</td>
-                  <th>인식거리</th>
+                  <th>인식 거리</th>
                   <td>100m</td>
                 </tr>
                 <tr>
-                  <th>RSTP 주소</th>
+                  <th>RTSP 주소</th>
                   <td colspan="3">rtsp://192.168.172.130:558/LiveChannel/media.smp</td>
                 </tr>
                 <tr>
@@ -91,7 +91,7 @@
                   <th>도로 ID</th>
                   <th>도로 명</th>
                   <th>방향</th>
-                  <th>방향명</th>
+                  <th>방향 명</th>
                 </tr>
               </thead>
               <tbody>
