--- a/base/html/crossroads_roi_set_tab.html
+++ b/base/html/crossroads_roi_set_tab.html
@@ -663,15 +663,16 @@
         </div>
         <!-- //속도 ROI 컨텐츠 -->
 
-        <button type="button" class="btn-roi-view">
+        <!-- <button type="button" class="btn-roi-view">
           <span class="screen-out">ROI설정 상세 열기/닫기 버튼</span>
-        </button>
+        </button> -->
       </div>
       <!-- //roi-view-container -->
 
       <main class="ly-container">
         <!-- temp-map 클래스명 : 퍼블리싱 작업 확인용 -->
-        <div id="map1" class="ly-map temp-map"></div>
+        <!-- 230821 type2 클래스 추가 -->
+        <div id="map1" class="ly-map type2 temp-map"></div>
         <!-- //ly-map -->
       </main>
       <!-- //ly-container -->
