--- a/base/html/index.html
+++ b/base/html/index.html
@@ -459,7 +459,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/set_point_map.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -473,7 +473,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_map_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -487,7 +487,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_map_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -501,7 +501,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_map_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -515,7 +515,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_map_view2.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -529,7 +529,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_map_add2.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -543,7 +543,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/set_point_map_edit2.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
