--- a/base/html/linkage_add.html
+++ b/base/html/linkage_add.html
@@ -31,7 +31,7 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>구역명</th>
+                  <th>구역</th>
                   <td class="pdr-20">
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -42,7 +42,7 @@
                       </select>
                     </div>
                   </td>
-                  <th class="pdl-15">지점 명</th>
+                  <th class="pdl-15">지점</th>
                   <td>
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -58,7 +58,7 @@
                   <th>지점 ID</th>
                   <td colspan="3">
                     <div class="ui input rounded">
-                      <input type="text" />
+                      <input type="text" disabled />
                     </div>
                   </td>
                 </tr>
@@ -66,7 +66,7 @@
                   <th>지점 주소</th>
                   <td colspan="3">
                     <div class="ui input rounded">
-                      <input type="text" />
+                      <input type="text" disabled />
                     </div>
                   </td>
                 </tr>
