--- a/base/html/road_add.html
+++ b/base/html/road_add.html
@@ -31,7 +31,7 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th rowspan="2" class="rowspan-style1">구역명</th>
+                  <th rowspan="2" class="rowspan-style1">구역</th>
                   <td class="pdr-20">
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -42,7 +42,7 @@
                       </select>
                     </div>
                   </td>
-                  <th class="pdl-15">지점 명</th>
+                  <th class="pdl-15">지점</th>
                   <td>
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -113,16 +113,10 @@
                       <input type="text" />
                     </div>
                   </td>
-                  <th class="pdl-15">표출길이</th>
+                  <th class="pdl-15">차로 수</th>
                   <td>
-                    <div class="selectbox-wrap rounded">
-                      <select>
-                        <option value="">1</option>
-                        <option value="">2</option>
-                        <option value="">3</option>
-                        <option value="">4</option>
-                        <option value="">5</option>
-                      </select>
+                    <div class="ui input rounded">
+                      <input type="text" />
                     </div>
                   </td>
                 </tr>
@@ -147,10 +141,16 @@
                       <input type="text" />
                     </div>
                   </td>
-                  <th class="pdl-15">차로 수</th>
+                  <th class="pdl-15">표출 길이</th>
                   <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
+                    <div class="selectbox-wrap rounded">
+                      <select>
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                        <option value="">4</option>
+                        <option value="">5</option>
+                      </select>
                     </div>
                   </td>
                 </tr>
