--- a/base/html/set_area.html
+++ b/base/html/set_area.html
@@ -32,20 +32,16 @@
 
             <section class="filter-grouop">
               <div class="inner">
-                <div class="ui segment label-dropdown">
-                  <em>행정구역</em>
-                  <div class="selectbox-wrap primary">
-                    <select>
-                      <option value="">전체</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
+                <div class="selectbox-wrap primary label-none">
+                  <select>
+                    <option value="">행정구역</option>
+                    <option value="">아이템1</option>
+                    <option value="">아이템2</option>
+                    <option value="">아이템3</option>
+                  </select>
                 </div>
-                <!-- //segment -->
-                <button class="ui primary basic button">검색</button>
+                <!-- //selectbox-wrap -->
+                <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
             </section>
@@ -94,7 +90,7 @@
                     <th>구역 명</th>
                     <th>위도</th>
                     <th>경도</th>
-                    <th>표출레벨</th>
+                    <th>표출 레벨</th>
                     <th>기본 구역</th>
                     <th>수정일시</th>
                   </tr>
