--- a/base/html/set_area_info_edit.html
+++ b/base/html/set_area_info_edit.html
@@ -32,40 +32,22 @@
               <tbody>
                 <tr>
                   <th>행정구역</th>
-                  <td class="pdr-20">
-                    <div class="selectbox-wrap rounded">
-                      <select disabled>
-                        <option value="">서울특별시</option>
-                        <option value="">경기도</option>
-                        <option value="">아이템2</option>
-                        <option value="">아이템3</option>
-                      </select>
-                    </div>
-                  </td>
-                  <th class="pdl-15">시/군/구</th>
-                  <td>
-                    <div class="selectbox-wrap rounded">
-                      <select disabled>
-                        <option value="">종로구</option>
-                        <option value="">--</option>
-                      </select>
+                  <td colspan="3">
+                    <div class="bind-inline gap-w15">
+                      <div class="ui input rounded">
+                        <input type="text" disabled />
+                      </div>
+                      <div class="ui input rounded">
+                        <input type="text" disabled />
+                      </div>
                     </div>
                   </td>
                 </tr>
                 <tr>
                   <th>구역 명</th>
-                  <td class="pdr-20">
+                  <td colspan="3">
                     <div class="ui input rounded">
                       <input type="text" />
-                    </div>
-                  </td>
-                  <th class="pdl-15">표출 레벨</th>
-                  <td>
-                    <div class="selectbox-wrap rounded">
-                      <select>
-                        <option value="">15</option>
-                        <option value="">16</option>
-                      </select>
                     </div>
                   </td>
                 </tr>
@@ -84,10 +66,13 @@
                   </td>
                 </tr>
                 <tr>
-                  <th>제한반경(m)</th>
+                  <th>표출 레벨</th>
                   <td class="pdr-20">
-                    <div class="ui input rounded">
-                      <input type="text" />
+                    <div class="selectbox-wrap rounded">
+                      <select>
+                        <option value="">15</option>
+                        <option value="">16</option>
+                      </select>
                     </div>
                   </td>
                   <th class="pdl-15">기본 구역</th>
