--- a/base/html/set_area_info_view.html
+++ b/base/html/set_area_info_view.html
@@ -33,15 +33,11 @@
               <tbody>
                 <tr>
                   <th>행정구역</th>
-                  <td>서울특별시</td>
-                  <th>시/군/구</th>
-                  <td>종로구</td>
+                  <td colspan="3">서울특별시 / 종로구</td>
                 </tr>
                 <tr>
                   <th>구역 명</th>
-                  <td>서울시 종로구</td>
-                  <th>표출 레벨</th>
-                  <td>7</td>
+                  <td colspan="3">서울시 종로구</td>
                 </tr>
                 <tr>
                   <th>위도</th>
@@ -50,8 +46,8 @@
                   <td>126.881465</td>
                 </tr>
                 <tr>
-                  <th>제한반경(m)</th>
-                  <td>5000</td>
+                  <th>표출 레벨</th>
+                  <td>7</td>
                   <th>기본 구역</th>
                   <td>
                     <div class="ui checkbox primary-chkbox txt-none c-bluesky">
