--- a/base/html/set_code_add.html
+++ b/base/html/set_code_add.html
@@ -46,15 +46,13 @@
                 </tr>
                 <tr>
                   <th>코드 명</th>
-                  <td colspan="3">
+                  <td class="pdr-20">
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
                   </td>
-                </tr>
-                <tr>
-                  <th>사용여부</th>
-                  <td colspan="3">
+                  <th class="pdl-15">사용 여부</th>
+                  <td>
                     <div class="selectbox-wrap rounded">
                       <select>
                         <option value="">사용</option>
