--- a/base/html/set_code_view.html
+++ b/base/html/set_code_view.html
@@ -31,27 +31,20 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>그룹 코드</th>
+                  <th>코드 유형</th>
                   <td>Branch type</td>
                   <th>코드</th>
                   <td>S</td>
                 </tr>
                 <tr>
-                  <th>명칭</th>
-                  <td colspan="3">교차로</td>
-                </tr>
-                <tr>
-                  <th>순서</th>
-                  <td>1</td>
+                  <th>코드 명</th>
+                  <td>교차로</td>
                   <th>사용 여부</th>
-                  <td>Y</td>
+                  <td>사용</td>
                 </tr>
                 <tr>
-                  <th>지점 주소</th>
-                  <td colspan="3">서울 노원구 동일로 지하 992-1</td>
-                </tr>
-                <tr>
-                  <th>설명</th>
+                  <!-- 230821 rowspan-style1 클래스 추가 -->
+                  <th class="rowspan-style1">설명</th>
                   <td colspan="3">
                     <div class="height-extend">Branch type</div>
                   </td>
