--- a/base/html/set_config_edit.html
+++ b/base/html/set_config_edit.html
@@ -29,10 +29,10 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>변수 명</th>
+                  <th>변수 ID</th>
                   <td colspan="3">
                     <div class="ui input rounded">
-                      <input type="text" />
+                      <input type="text" disabled />
                     </div>
                   </td>
                 </tr>
