--- a/base/html/set_config_view.html
+++ b/base/html/set_config_view.html
@@ -31,19 +31,15 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>변수 명</th>
+                  <th>변수 ID</th>
                   <td colspan="3">Manager</td>
-                </tr>
-                <tr>
-                  <th>명칭</th>
-                  <td colspan="3">교차로</td>
                 </tr>
                 <tr>
                   <th>변수 값</th>
                   <td colspan="3">Choi</td>
                 </tr>
                 <tr>
-                  <th>설명</th>
+                  <th class="rowspan-style1">설명</th>
                   <td colspan="3">
                     <div class="height-extend">관리자 이름</div>
                   </td>
