--- a/base/html/sw_add.html
+++ b/base/html/sw_add.html
@@ -31,57 +31,49 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>구역 명</th>
+                  <th>연동 IP 주소</th>
                   <td class="pdr-20">
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                  <th class="pdl-15">별칭</th>
+                  <td>
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>설정 PORT</th>
+                  <td class="pdr-20">
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                  <th class="pdl-15">실시간 PORT</th>
+                  <td>
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>이벤트 PORT</th>
+                  <td class="pdr-20">
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                  <th class="pdl-15">연동 번호</th>
+                  <td>
                     <div class="selectbox-wrap rounded">
                       <select>
-                        <option value="">선택</option>
+                        <option value="">1</option>
                         <option value="">아이템1</option>
                         <option value="">아이템2</option>
                         <option value="">아이템3</option>
                       </select>
-                    </div>
-                  </td>
-                  <th class="pdl-15">연동 IP 주소</th>
-                  <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>별칭</th>
-                  <td colspan="3">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>포트 1</th>
-                  <td class="pdr-20">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                  <th class="pdl-15">포트 2</th>
-                  <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>포트 3</th>
-                  <td class="pdr-20">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                  <th class="pdl-15">포트 4</th>
-                  <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
                     </div>
                   </td>
                 </tr>
