--- a/base/html/sw_list.html
+++ b/base/html/sw_list.html
@@ -32,27 +32,6 @@
             </div>
             <!-- //breadcrumb -->
 
-            <section class="filter-grouop">
-              <div class="inner">
-                <div class="ui segment label-dropdown">
-                  <em>구역 명</em>
-                  <div class="selectbox-wrap primary">
-                    <select>
-                      <option value="">전체</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
-                </div>
-                <!-- //segment -->
-                <button class="ui primary basic button">검색</button>
-              </div>
-              <!-- //inner -->
-            </section>
-            <!-- //filter-grouop -->
-
             <section class="button-function-group">
               <div class="left">
                 <div class="ui basic buttons">
@@ -82,7 +61,6 @@
                   <col />
                   <col />
                   <col />
-                  <col />
                 </colgroup>
                 <thead>
                   <tr>
@@ -93,14 +71,13 @@
                       </div>
                     </th>
                     <th>No</th>
-                    <th>구역 명</th>
                     <th>SW 연동 IP 주소</th>
                     <th>별칭</th>
-                    <th>포트 1</th>
-                    <th>포트 2</th>
-                    <th>포트 3</th>
-                    <th>포트 4</th>
-                    <th>카메라 연동 개수</th>
+                    <th>설정 PORT</th>
+                    <th>실시간 PORT</th>
+                    <th>이벤트 PORT</th>
+                    <th>연동 번호</th>
+                    <th>카메라 개수</th>
                     <th>연계 카메라 등록</th>
                     <th>수정일시</th>
                   </tr>
@@ -114,13 +91,12 @@
                       </div>
                     </td>
                     <td>1</td>
-                    <td>태릉</td>
                     <td>10.30.182.210</td>
                     <td>영상분석서버1</td>
                     <td>8010</td>
                     <td>8011</td>
                     <td>8012</td>
-                    <td></td>
+                    <td>1</td>
                     <td>40</td>
                     <td>
                       <a href="#" class="ui secondary basic button c-gray rounded">추가</a>
@@ -135,13 +111,12 @@
                       </div>
                     </td>
                     <td>1</td>
-                    <td>태릉</td>
                     <td>10.30.182.210</td>
                     <td>영상분석서버1</td>
                     <td>8010</td>
                     <td>8011</td>
                     <td>8012</td>
-                    <td></td>
+                    <td>1</td>
                     <td>40</td>
                     <td>
                       <a href="#" class="ui secondary basic button c-gray rounded">추가</a>
