--- a/base/html/sw_view.html
+++ b/base/html/sw_view.html
@@ -31,26 +31,22 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>구역 명</th>
-                  <td>태릉</td>
                   <th>연동 IP 주소</th>
                   <td>10.30.140.210</td>
-                </tr>
-                <tr>
                   <th>별칭</th>
-                  <td colspan="3">영상분석서버1</td>
+                  <td>영상분석서버1</td>
                 </tr>
                 <tr>
-                  <th>포트 1</th>
+                  <th>설정 PORT</th>
                   <td>8010</td>
-                  <th>포트 2</th>
+                  <th>실시간 PORT</th>
                   <td>8010</td>
                 </tr>
                 <tr>
-                  <th>포트 3</th>
+                  <th>이벤트 PORT</th>
                   <td>8010</td>
-                  <th>포트 4</th>
-                  <td>8010</td>
+                  <th>연동 번호</th>
+                  <td>1</td>
                 </tr>
               </tbody>
             </table>
