--- a/base/html/bj_add.html
+++ b/base/html/bj_add.html
@@ -25,7 +25,9 @@
             <table>
               <colgroup>
                 <col style="width: 20%" />
-                <col style="width: 80%" />
+                <col style="width: 30%" />
+                <col style="width: 20%" />
+                <col style="width: 30%" />
               </colgroup>
               <tbody>
                 <tr>
@@ -37,24 +39,14 @@
                   </td>
                 </tr>
                 <tr>
-                  <th>실행주기</th>
-                  <td colspan="3">
+                  <th>실행 주기</th>
+                  <td class="pdr-20">
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
                   </td>
-                </tr>
-                <tr>
-                  <th>최종실행</th>
-                  <td colspan="3">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>실행상태</th>
-                  <td colspan="3">
+                  <th>실행 상태</th>
+                  <td>
                     <div class="selectbox-wrap rounded" style="width: 20.5rem">
                       <select>
                         <option value=""></option>
