--- a/base/html/bj_edit.html
+++ b/base/html/bj_edit.html
@@ -25,41 +25,41 @@
             <table>
               <colgroup>
                 <col style="width: 20%" />
-                <col style="width: 80%" />
+                <col style="width: 30%" />
+                <col style="width: 20%" />
+                <col style="width: 30%" />
               </colgroup>
               <tbody>
                 <tr>
                   <th>배치작업 ID</th>
                   <td colspan="3">
                     <div class="ui input rounded">
-                      <input type="text" />
+                      <input type="text" disabled />
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <th>실행주기</th>
-                  <td colspan="3">
+                  <th>실행 주기</th>
+                  <td class="pdr-20">
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
                   </td>
-                </tr>
-                <tr>
-                  <th>최종실행</th>
-                  <td colspan="3">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>실행상태</th>
-                  <td colspan="3">
-                    <div class="selectbox-wrap rounded" style="width: 20.5rem">
+                  <th>실행 상태</th>
+                  <td>
+                    <div class="selectbox-wrap rounded">
                       <select>
                         <option value="">Y</option>
                         <option value="">N</option>
                       </select>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>최종 실행</th>
+                  <td colspan="3">
+                    <div class="ui input rounded">
+                      <input type="text" />
                     </div>
                   </td>
                 </tr>
