--- a/base/html/camera_list.html
+++ b/base/html/camera_list.html
@@ -34,33 +34,25 @@
 
             <section class="filter-grouop">
               <div class="inner">
-                <div class="ui segment label-dropdown">
-                  <em>구역 명</em>
-                  <div class="selectbox-wrap primary">
-                    <select>
-                      <option value="">전체</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
+                <div class="selectbox-wrap primary label-none">
+                  <select>
+                    <option value="">구역</option>
+                    <option value="">아이템1</option>
+                    <option value="">아이템2</option>
+                    <option value="">아이템3</option>
+                  </select>
                 </div>
-                <!-- //segment -->
-                <div class="ui segment label-dropdown">
-                  <em>지점 명</em>
-                  <div class="selectbox-wrap primary">
-                    <select>
-                      <option value="">전체</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
+                <!-- //selectbox-wrap -->
+                <div class="selectbox-wrap primary label-none">
+                  <select>
+                    <option value="">지점</option>
+                    <option value="">아이템1</option>
+                    <option value="">아이템2</option>
+                    <option value="">아이템3</option>
+                  </select>
                 </div>
-                <!-- //segment -->
-                <button class="ui primary basic button">검색</button>
+                <!-- //selectbox-wrap -->
+                <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
             </section>
@@ -82,7 +74,8 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table is-chkbox-fncbtn-none2">
+              <!-- 230821 is-chkbox-fncbtn-none2 클래스 삭제 -->
+              <table class="ui very basic table">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
@@ -95,10 +88,16 @@
                 </colgroup>
                 <thead>
                   <tr>
-                    <th></th>
+                    <!-- 230821 체크박스 추가 -->
+                    <th>
+                      <div class="ui checkbox primary-chkbox txt-none c-navy">
+                        <input type="checkbox" />
+                        <label></label>
+                      </div>
+                    </th>
                     <th>No</th>
-                    <th>구역 명</th>
-                    <th>지점 명</th>
+                    <th>구역</th>
+                    <th>지점</th>
                     <th>카메라 명</th>
                     <th>촬영 방향</th>
                     <th>IP Address</th>
