--- a/base/html/linkage_list.html
+++ b/base/html/linkage_list.html
@@ -26,39 +26,33 @@
               <i class="right angle icon divider"></i>
               <span class="section">교차로</span>
               <i class="right angle icon divider"></i>
+              <span class="section">시스템 관리</span>
+              <i class="right angle icon divider"></i>
               <div class="active section">연동제어 관리</div>
             </div>
             <!-- //breadcrumb -->
 
             <section class="filter-grouop">
               <div class="inner">
-                <div class="ui segment label-dropdown">
-                  <em>구역 명</em>
-                  <div class="selectbox-wrap primary">
-                    <select>
-                      <option value="">전체</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
+                <div class="selectbox-wrap primary label-none">
+                  <select>
+                    <option value="">구역</option>
+                    <option value="">아이템1</option>
+                    <option value="">아이템2</option>
+                    <option value="">아이템3</option>
+                  </select>
                 </div>
-                <!-- //segment -->
-                <div class="ui segment label-dropdown">
-                  <em>최소제어단위</em>
-                  <div class="selectbox-wrap primary">
-                    <select>
-                      <option value="">전체</option>
-                      <option value="">아이템1</option>
-                      <option value="">아이템2</option>
-                      <option value="">아이템3</option>
-                    </select>
-                  </div>
-                  <!-- //selectbox-wrap -->
+                <!-- //selectbox-wrap -->
+                <div class="selectbox-wrap primary label-none">
+                  <select>
+                    <option value="">최소제어단위</option>
+                    <option value="">아이템1</option>
+                    <option value="">아이템2</option>
+                    <option value="">아이템3</option>
+                  </select>
                 </div>
-                <!-- //segment -->
-                <button class="ui primary basic button">검색</button>
+                <!-- //selectbox-wrap -->
+                <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
             </section>
@@ -99,8 +93,8 @@
                       </div>
                     </th>
                     <th>No</th>
-                    <th>구역 명</th>
-                    <th>지점 명</th>
+                    <th>구역</th>
+                    <th>지점</th>
                     <th>지점 ID</th>
                     <th>지점 주소</th>
                     <th>최소제어단위(Sub-Area) 구분</th>
