--- a/base/html/road_view.html
+++ b/base/html/road_view.html
@@ -31,20 +31,14 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th>구역 명</th>
+                  <th>구역</th>
                   <td>태릉</td>
-                  <th>지점 명</th>
+                  <th>지점</th>
                   <td>교차로</td>
                 </tr>
                 <tr>
                   <th>지점 ID</th>
                   <td colspan="3">1001</td>
-                </tr>
-                <tr>
-                  <th>순서</th>
-                  <td>1</td>
-                  <th>사용 여부</th>
-                  <td>Y</td>
                 </tr>
                 <tr>
                   <th>지점 주소</th>
@@ -63,8 +57,8 @@
                 <tr>
                   <th>방향 명</th>
                   <td>서울공릉초등학교 방면</td>
-                  <th>표출길이</th>
-                  <td>5</td>
+                  <th>차로 수</th>
+                  <td>4</td>
                 </tr>
                 <tr>
                   <th>위도</th>
@@ -75,8 +69,8 @@
                 <tr>
                   <th>각도</th>
                   <td>50</td>
-                  <th>차로 수</th>
-                  <td>4</td>
+                  <th>표출 길이</th>
+                  <td>Level 5</td>
                 </tr>
               </tbody>
             </table>
