--- a/base/html/set_code_list.html
+++ b/base/html/set_code_list.html
@@ -32,14 +32,10 @@
 
             <section class="filter-grouop">
               <div class="inner">
-                <div class="ui segment label-input">
-                  <em>코드 유형</em>
-                  <div class="ui input md">
-                    <input type="text" />
-                  </div>
+                <div class="ui input md label-none">
+                  <input type="text" placeholder="코드유형" />
                 </div>
-                <!-- //segment -->
-                <button class="ui primary basic button">검색</button>
+                <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
             </section>
@@ -69,8 +65,8 @@
                   <col />
                   <col />
                   <col />
-                  <col />
-                  <col />
+                  <col style="width: 90px" />
+                  <col style="width: 220px" />
                 </colgroup>
                 <thead>
                   <tr>
