--- a/base/html/set_point_add.html
+++ b/base/html/set_point_add.html
@@ -31,7 +31,7 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th rowspan="2" class="rowspan-style1">구역명</th>
+                  <th rowspan="2" class="rowspan-style1">구역</th>
                   <td class="pdr-20">
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -90,6 +90,20 @@
                   </td>
                 </tr>
                 <tr>
+                  <th>위도</th>
+                  <td class="pdr-20">
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                  <th class="pdl-15">경도</th>
+                  <td>
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
                   <th>도로 개수</th>
                   <td class="pdr-20">
                     <div class="selectbox-wrap rounded">
@@ -120,20 +134,6 @@
                         <option value="">7</option>
                         <option value="">8</option>
                       </select>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>위도</th>
-                  <td class="pdr-20">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                  <th class="pdl-15">경도</th>
-                  <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
                     </div>
                   </td>
                 </tr>
