--- a/base/html/set_point_edit.html
+++ b/base/html/set_point_edit.html
@@ -31,26 +31,16 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th rowspan="2" class="rowspan-style1">구역명</th>
+                  <th rowspan="2" class="rowspan-style1">구역</th>
                   <td class="pdr-20">
-                    <div class="selectbox-wrap rounded">
-                      <select disabled>
-                        <option value="">선택</option>
-                        <option value="">아이템1</option>
-                        <option value="">아이템2</option>
-                        <option value="">아이템3</option>
-                      </select>
+                    <div class="ui input rounded">
+                      <input type="text" disabled />
                     </div>
                   </td>
                   <th class="pdl-15">지점 유형</th>
                   <td>
-                    <div class="selectbox-wrap rounded">
-                      <select disabled>
-                        <option value="">선택</option>
-                        <option value="">아이템1</option>
-                        <option value="">아이템2</option>
-                        <option value="">아이템3</option>
-                      </select>
+                    <div class="ui input rounded">
+                      <input type="text" disabled />
                     </div>
                   </td>
                 </tr>
@@ -90,6 +80,20 @@
                   </td>
                 </tr>
                 <tr>
+                  <th>위도</th>
+                  <td class="pdr-20">
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                  <th class="pdl-15">경도</th>
+                  <td>
+                    <div class="ui input rounded">
+                      <input type="text" />
+                    </div>
+                  </td>
+                </tr>
+                <tr>
                   <th>도로 개수</th>
                   <td class="pdr-20">
                     <div class="selectbox-wrap rounded">
@@ -120,20 +124,6 @@
                         <option value="">7</option>
                         <option value="">8</option>
                       </select>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>위도</th>
-                  <td class="pdr-20">
-                    <div class="ui input rounded">
-                      <input type="text" />
-                    </div>
-                  </td>
-                  <th class="pdl-15">경도</th>
-                  <td>
-                    <div class="ui input rounded">
-                      <input type="text" />
                     </div>
                   </td>
                 </tr>
